--- a/cars.html
+++ b/cars.html
@@ -525,7 +525,7 @@ This is a sample template for implementing live blogs in AMP.
   <section class="heading">
     <h1>Minnow's Auto Blog</h1>
     <p><small class="date">Wed December 5 2024</small></p>
-    <p><small>by Brian Ebel</small></p>
+    <p><small>by Minnowspace</small></p>
     <p id="summary">Autoblog covering all makes and highlighting the best models for your money.</p>
   </section>
   <!-- ## Blog Posts -->
