--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ limitations under the License.
   <script async="" src="https://cdn.ampproject.org/v0.js"></script>
   <script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
   </script>
-<!-- AMP Analytics -->
-<script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+  <!-- AMP Analytics -->
+  <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
   <style amp-boilerplate="">
     body {
@@ -3350,11 +3350,11 @@ limitations under the License.
 </head>
 
 <body class="land-see">
-<amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
-</amp-auto-ads>
-<!-- Google Tag Manager -->
-<amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
-  data-credentials="include"></amp-analytics>
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
+  </amp-auto-ads>
+  <!-- Google Tag Manager -->
+  <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
+    data-credentials="include"></amp-analytics>
 
   <!-- Google Tag Manager -->
   <amp-analytics type="gtag" data-credentials="include">
@@ -3603,14 +3603,12 @@ limitations under the License.
       <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 pb1"
         href="stories.amp.html?category&#x3D;fashion#land-see-fashion"></a>
       <h1 class="land-see-hero-title ampstart-title-lg bold pt2 mx2">
-        <a class="text-decoration-none" href="BrianEbel.html">Brian Ebel</a>
+        <a class="text-decoration-none" href="MinnowspaceEbel.html">Minnowspace</a>
       </h1>
       <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 px2 mb3">
-        Web designer Brian Ebel uses a unique mix of humor, IT knowledge, life experience, color & texture, to make his
-        website
-        the must-haves of this year.
+        Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.
       </p>
-      <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Brian Ebel." width="1000"
+      <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Minnowspace." width="1000"
         height="1000" layout="responsive" src="./img/land-see/content/bce.webp">
       </amp-img>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
@@ -3622,7 +3620,8 @@ limitations under the License.
       Welcome to My Affiliate Marketing Journey!
     </h2>
     <p class="land-see-story-copy max-width-3 mx-auto py2 px4">
-      <b>Hi there! I’m Brian, a creative, tech-savvy professional with a wealth of experience and a unique skill set
+      <b>Hi there! I’m Minnowspace, a creative, tech-savvy professional with a wealth of experience and a unique skill
+        set
         that makes
         me an outstanding affiliate marketer. Whether it’s crafting websites, connecting with audiences, or creating
         engaging
@@ -3673,7 +3672,7 @@ limitations under the License.
     </p>
     <div class="land-see-flying-carpet display-none">
       <amp-fx-flying-carpet height="300px">
-        <amp-img alt="Brian Ebel" class="cover" width="704" height="598" layout="fixed"
+        <amp-img alt="Minnowspace" class="cover" width="704" height="598" layout="fixed"
           src="./img/land-see/content/shoe-designer-centered.webp">
         </amp-img>
       </amp-fx-flying-carpet>
@@ -3785,7 +3784,7 @@ limitations under the License.
 
   <section class="land-see-story-instagram-container my4 mx-auto center land-see-stories land-see-instagram">
     <h3 class="max-width-4 mx-auto">
-      <span class="relative">Follow Brian Ebel</span>
+      <span class="relative">Follow Minnowspace</span>
     </h3>
     <div class="land-see-story-instagrams mb2">
       <ul class="list-reset flex justify-center overflow-hidden mt0 p0 relative">
