--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -3629,16 +3629,16 @@ limitations under the License.
           </div>
         </div>
         <div class="land-see-hero-content mx-auto relative">
-          <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Brian Ebel"
+          <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Minnowspace"
             width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce2.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
               href="stories.amp.html?category&#x3D;fashion#land-see-fashion">Fashion</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Designer
-                Brian Ebel</a></h1>
+                Minnowspace</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              "Web designer Brian Ebel uses a unique<br> mix of humor, IT knowledge, life experience, color & texture,
+              Minnowspace uses a unique<br> mix of humor, IT knowledge, life experience, color & texture,
               to make his website
               the must-haves of this year.
             </p>
@@ -3668,16 +3668,16 @@ limitations under the License.
         width="1290" height="680" layout="responsive" [slide]="selectedSlide"
         on="slideChange:AMP.setState({selectedSlide: event.index})" noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
-          <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Brian Ebel"
+          <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Minnowspace"
             width="1290" height="680" layout="responsive" src="./img/land-see/content/bce.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
               href="stories.amp.html?category&#x3D;fashion#land-see-fashion">Fashion</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Designer
-                Brian Ebel</a></h1>
+                Minnowspace</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              "Web designer Brian Ebel uses a unique <br>mix of humor, IT knowledge, life experience, color & texture,
+              "Minnowspace uses a unique <br>mix of humor, IT knowledge, life experience, color & texture,
               to make his website
               the must-haves of this year.
             </p>
@@ -3722,16 +3722,16 @@ limitations under the License.
         width="auto" height="570" layout="fixed-height" [slide]="selectedSlide"
         on="slideChange:AMP.setState({selectedSlide: event.index})" noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
-          <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Designer Brian Ebel" width="auto"
+          <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Designer Minnowspace" width="auto"
             height="278" layout="fixed-height" src="./img/land-see/content/bce.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 ">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
               href="stories.amp.html?category&#x3D;fashion#land-see-fashion">Fashion</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none"
-                href="index.html">Designer<br>Brian Ebel</a></h1>
+                href="index.html">Designer<br>Minnowspace</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              "Web designer Brian Ebel uses a unique mix of humor, IT knowledge, life experience, color & texture, to
+              "Minnowspace uses a unique mix of humor, IT knowledge, life experience, color & texture, to
               make his website
               the must-haves of this year.
             </p>
@@ -3830,16 +3830,16 @@ limitations under the License.
           </div>
         </div>
         <div class="land-see-hero-content mx-auto relative">
-          <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Brian Ebel"
+          <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Minnowspace"
             width="1000" height="1000" layout="responsive" src="./img/land-see/content/bce2.webp">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
               href="stories.amp.html?category&#x3D;fashion#land-see-fashion">Fashion</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Designer
-                Brian Ebel</a></h1>
+                Minnowspace</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
-              "Web designer Brian Ebel uses a unique<br> mix of humor, IT knowledge, life experience, color & texture,
+              "Minnowspace uses a unique<br> mix of humor, IT knowledge, life experience, color & texture,
               to make his website
               the must-haves of this year.
             </p>
