--- a/w.html
+++ b/w.html
@@ -525,7 +525,7 @@ This is a sample template for implementing live blogs in AMP.
   <section class="heading">
     <h1>Minnowspace</h1>
     <p><small class="date">Wed December 5 2024</small></p>
-    <p><small>by Brian Ebel</small></p>
+    <p><small>by Minnowspace</small></p>
     <p id="summary">Minnow's Corner of the Internet.</p>
   </section>
   <!-- ## Blog Posts -->
@@ -543,7 +543,7 @@ This is a sample template for implementing live blogs in AMP.
           <amp-img src="me.webp" layout="responsive" width="30" height="30">
           </amp-img>
           <p class="date">12/5/2024</p>
-          <p class="text">Brian Ebel.</p>
+          <p class="text">Minnowspace.</p>
           <p class="social-share">
             <amp-social-share type="twitter" width="45" height="33" data-param-url="AMPDOC_URL#1"></amp-social-share>
             <amp-social-share type="facebook" width="45" height="33" data-attribution="254325784911610"
