--- a/home.amp.html
+++ b/home.amp.html
@@ -2494,7 +2494,7 @@ limitations under the License.
 
 
     <small>
-      © Brian Ebel
+      © Minnowspace
     </small>
   </footer>
   <!-- End Footer -->
