--- a/index.html
+++ b/index.html
@@ -3609,10 +3609,10 @@ limitations under the License.
         Minnowspace is a place where we can all come together to share our stories, experiences, and ideas.
       </p>
       <amp-img media="(min-width: 25.06rem)" class="cover max-width-4 mx-auto mt2" alt="Minnowspace." width="1000"
-        height="1000" layout="responsive" src="./img/land-see/content/bce.webp">
+        height="1000" layout="responsive" src="./img/land-see/content/minnowspace.png">
       </amp-img>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
-        Photo by: Mikel Laporte
+
       </div>
     </div>
 
@@ -3677,7 +3677,7 @@ limitations under the License.
         </amp-img>
       </amp-fx-flying-carpet>
       <div class="land-see-image-attribution ampstart-byline left-align mx-auto max-width-3 px4 pt1">
-        Photo by: Mikel LaPorte
+
       </div>
     </div>
     <blockquote class="land-see-blockquote max-width-3 mx-auto py4 px4 relative">
