--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -3669,7 +3669,7 @@ limitations under the License.
         on="slideChange:AMP.setState({selectedSlide: event.index})" noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-bottom" alt="Designer Minnowspace"
-            width="1290" height="680" layout="responsive" src="./img/land-see/content/bce.webp">
+            width="1290" height="680" layout="responsive" src="./img/land-see/content/minnowspace.png">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
@@ -3723,7 +3723,7 @@ limitations under the License.
         on="slideChange:AMP.setState({selectedSlide: event.index})" noloading="" controls="" loop="" type="slides">
         <div class="land-see-hero-content mx-auto relative">
           <amp-img class="cover land-see-hero-image land-see-cover-position-top" alt="Designer Minnowspace" width="auto"
-            height="278" layout="fixed-height" src="./img/land-see/content/bce.webp">
+            height="278" layout="fixed-height" src="./img/land-see/content/minnowspace.png">
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 ">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
