--- a/index.html
+++ b/index.html
@@ -3357,7 +3357,8 @@ limitations under the License.
     data-credentials="include"></amp-analytics>
 
   <!-- Google Tag Manager -->
-   <!--" data-credentials="include">
+   <!---->
+  <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
   {
     "vars": {
@@ -3386,7 +3387,7 @@ limitations under the License.
   }
   </script>
   </amp-analytics>
--->
+
 
 
   <amp-animation id="recommendedSlideIn" layout="nodisplay">
