--- a/index.html
+++ b/index.html
@@ -3352,10 +3352,10 @@ limitations under the License.
 <body class="land-see">
   <amp-auto-ads type="adsense" data-ad-client="ca-pub-3239465181490887">
   </amp-auto-ads>
-  <!-- Google Tag Manager
+  <!-- Google Tag Manager-->
   <amp-analytics config="https://www.googletagmanager.com/amp.json?id=GTM-5VTXDGGN&gtm.url=SOURCE_URL"
     data-credentials="include"></amp-analytics>
--->
+
   <!-- Google Tag Manager -->
    <!---->
   <amp-analytics type="gtag" data-credentials="include">
