editing out old stuff

--- a/index.html
+++ b/index.html
@@ -2714,7 +2714,7 @@ limitations under the License.
       opacity: 0.77;
     }
 
-    .land-see-interiors:before {
+    .land-see-travel:before {
       opacity: 1;
     }
 
@@ -3459,8 +3459,7 @@ limitations under the License.
                   <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=interiors#land-see-interiors"
-                    class="text-decoration-none">Interiors</a>
+                  <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Arts &amp;
@@ -3475,10 +3474,10 @@ limitations under the License.
           </amp-accordion>
           <!-- End Dropdown -->
         </li>
-        <li class="ampstart-nav-item">
+        <!--      <li class="ampstart-nav-item">
           <a href="home.amp.html" class="text-decoration-none block">Shop</a>
         </li>
-
+-->
       </ul>
     </nav>
     <!--
@@ -3540,8 +3539,7 @@ limitations under the License.
                   <a href="stories.amp.html?category=fashion#land-see-fashion" class="text-decoration-none">Fashion</a>
                 </li>
                 <li class="ampstart-dropdown-item">
-                  <a href="stories.amp.html?category=interiors#land-see-interiors"
-                    class="text-decoration-none">Interiors</a>
+                  <a href="stories.amp.html?category=travel#land-see-travel" class="text-decoration-none">travel</a>
                 </li>
                 <li class="ampstart-dropdown-item">
                   <a href="stories.amp.html?category=food#land-see-food" class="text-decoration-none">Arts &amp;
