--- a/land-see.amp.html
+++ b/land-see.amp.html
@@ -2701,7 +2701,7 @@ limitations under the License.
       opacity: .77
     }
 
-    .land-see-interiors:before {
+    .land-see-travel:before {
       opacity: 1
     }
 
@@ -3483,8 +3483,8 @@ limitations under the License.
                     class="text-decoration-none">Design</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=fashion#land-see-fashion"
                     class="text-decoration-none">Fashion</a></li>
-                <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=interiors#land-see-interiors"
-                    class="text-decoration-none">Interiors</a></li>
+                <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=travel#land-see-travel"
+                    class="text-decoration-none">travel</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=food#land-see-food"
                     class="text-decoration-none">Food</a></li>
                 <li class="ampstart-dropdown-item"><a
@@ -3552,8 +3552,8 @@ limitations under the License.
                     class="text-decoration-none">Design</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=fashion#land-see-fashion"
                     class="text-decoration-none">Fashion</a></li>
-                <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=interiors#land-see-interiors"
-                    class="text-decoration-none">Interiors</a></li>
+                <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=travel#land-see-travel"
+                    class="text-decoration-none">travel</a></li>
                 <li class="ampstart-dropdown-item"><a href="stories.amp.html?category=food#land-see-food"
                     class="text-decoration-none">Food</a></li>
                 <li class="ampstart-dropdown-item"><a
@@ -3619,7 +3619,7 @@ limitations under the License.
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
-              href="stories.amp.html?category&#x3D;interiors#land-see-interiors">Interiors</a>
+              href="stories.amp.html?category&#x3D;travel#land-see-travel">travel</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Bold
                 Coast Cottage in Main</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
@@ -3706,7 +3706,7 @@ limitations under the License.
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
-              href="stories.amp.html?category&#x3D;interiors#land-see-interiors">Interiors</a>
+              href="stories.amp.html?category&#x3D;travel#land-see-travel">travel</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Bold
                 Coast Cottage in Main</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
@@ -3760,7 +3760,7 @@ limitations under the License.
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 ">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
-              href="stories.amp.html?category&#x3D;interiors#land-see-interiors">Interiors</a>
+              href="stories.amp.html?category&#x3D;travel#land-see-travel">travel</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Bold
                 Coast Cottage in Main</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
@@ -3820,7 +3820,7 @@ limitations under the License.
           </amp-img>
           <div class="land-see-hero-typography mx-auto center z2 absolute">
             <a class="land-see-post-category land-see-page-navigation underline caps max-width-1 sm-hide md-hide lg-hide"
-              href="stories.amp.html?category&#x3D;interiors#land-see-interiors">Interiors</a>
+              href="stories.amp.html?category&#x3D;travel#land-see-travel">travel</a>
             <h1 class="land-see-hero-title ampstart-title-md"><a class="text-decoration-none" href="index.html">Bold
                 Coast Cottage in Main</a></h1>
             <p class="land-see-hero-caption ampstart-caption mx-auto max-width-3 pt1 mb3">
@@ -4088,10 +4088,10 @@ limitations under the License.
           </amp-list>
         </div>
       </section>
-      <section class="land-see-stories land-see-interiors">
-        <h3 class="max-width-4 mx-auto">Interiors</h3>
+      <section class="land-see-stories land-see-travel">
+        <h3 class="max-width-4 mx-auto">travel</h3>
         <div class="max-width-4 mx-auto">
-          <amp-list src="./api/interiors-accordion.json" height="430" layout="fixed-height">
+          <amp-list src="./api/travel-accordion.json" height="430" layout="fixed-height">
             <template type="amp-mustache">
               <ul class="list-reset m0 p0 center flex justify-center">
                 {{#land-see-category}}
