front page photos

--- a/index.html
+++ b/index.html
@@ -3693,25 +3693,25 @@ limitations under the License.
         [slide]="selectedSlide" on="slideChange:AMP.setState({selectedSlide: event.index})" controls="" loop=""
         type="slides">
         <amp-img class="cover land-see-cover-position-bottom" alt="Omg, websites." width="813" height="480"
-          layout="responsive" src="./img/land-see/content/gallery/kim-0.webp">
+          layout="responsive" src="./img/hotels/pexels-gsn-travel-29101273.jpg">
         </amp-img>
         <amp-img class="cover" alt="Those websites are miiiiine.." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-1.webp">
+          src="./img/tea/pexels-lilartsy-1793035.webp">
         </amp-img>
         <amp-img class="cover" alt="These websites are rad.." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-2.webp">
+          src="./img/hotels/pexels-zepps-project-837783-2410385.jpg">
         </amp-img>
         <amp-img class="cover" alt="Shoe designer self-portrait." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-5.webp">
+          src="./img/tea/pexels-minan1398-1624554.webp">
         </amp-img>
         <amp-img class="cover" alt="Those websites are rad.." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-3.webp">
+          src="./img/tea/pexels-pixabay-460257.webp">
         </amp-img>
         <amp-img class="cover" alt="Matching accessories." width="813" height="480" layout="responsive"
-          src="./img/land-see/content/gallery/kim-6.webp">
+          src="./img/hotels/pexels-snapwire-165799.jpg">
         </amp-img>
         <amp-img class="cover" alt="Sigh, having such amazing websites is almost a burden." width="813" height="480"
-          layout="responsive" src="./img/land-see/content/gallery/kim-4.webp">
+          layout="responsive" src="./img/coffee/pexels-lood-goosen-508841-1235706.jpg">
         </amp-img>
       </amp-carousel>
       <div class="mx1">
@@ -3721,49 +3721,49 @@ limitations under the License.
               <amp-img class="cover land-see-cover-position-bottom land-see-selected-preview-image"
                 [class]="selectedSlide &#x3D;&#x3D; 0 ? &#39;cover land-see-cover-position-bottom land-see-selected-preview-image&#39; : &#39;cover land-see-cover-position-bottom&#39;"
                 alt="Go to slide 1" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-0.webp">
+                src="./img/hotels/pexels-gsn-travel-29101273.jpg">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 1})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 1 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 2" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-1.webp">
+                src="./img/tea/pexels-lilartsy-1793035.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 2})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 2 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 3" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-2.webp">
+                src="./img/hotels/pexels-zepps-project-837783-2410385.jpg">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 3})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 3 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 4" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-5.webp">
+                src="./img/tea/pexels-minan1398-1624554.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 4})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 4 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 5" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-3.webp">
+                src="./img/tea/pexels-pixabay-460257.webp">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 5})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 5 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 6" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-6.webp">
+                src="./img/hotels/pexels-snapwire-165799.jpg">
               </amp-img>
             </button>
             <button on="tap:AMP.setState({selectedSlide: 6})" class="px0">
               <amp-img class="cover"
                 [class]="selectedSlide &#x3D;&#x3D; 6 ? &#39;cover land-see-selected-preview-image&#39; : &#39;cover&#39;"
                 alt="Go to slide 7" width="77" height="58" layout="fixed"
-                src="./img/land-see/content/gallery/kim-4.webp">
+                src="./img/coffee/pexels-lood-goosen-508841-1235706.jpg">
               </amp-img>
             </button>
           </div>
